# conda-utils

./: .coveragerc  CONTRIBUTING.rst  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
src/conda_utils/: __init__.py  cli.py  envfile.py  skeleton.py
tests/: conftest.py  test_env_to_yaml.py  test_skeleton.py
